css/basic.css
/* ==================================================================
    Header and Nav
================================================================== */

nav {
  width: 64%;
  display: inline-block;
}

nav ul {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

nav li {
  display: inline-block;
}

nav li a {
  color: #555555;/*#004de6;*/
  text-decoration: none;
  font-size: 18px;
  font-weight: bold;
  display: inline-block;
  float: center;
  padding-top: 10px;
  padding-right: 2px;
  padding-left: 2px;
  padding-bottom: 5px;
  margin-left: 7px;
  margin-right: 7px;
  border-bottom: 2px solid #555555;/*#4c9cf1;*/
  transition: color 0.3s ease;
}

header {
  text-align: right; /* was right */
  margin-top: 50px;
  margin-bottom: 50px;
  display: flex;
  align-items: center;
}

header .blog-name {
  width: 35%;
  display: inline-block;
  text-align: left;
  font-size: 24px;
  font-weight: bold; /* added by me */
  /*font-family: "Lucida Console", Monaco, monospace;*/
  padding-top: 10px;
}

header .blog-name a {
  color: #000000; /*#a6a2a0;*/
  text-decoration: none;
}

header li a:hover {
  color: black;
  border-bottom: 2px solid black;
}

#menu-icon {
  display: none;
}

@media (max-width: 480px) {
  header {
    padding-left: 6%;
    padding-right: 6%;
  }
}

@media (min-width: 481px) {
  header {
    padding-left: 12.5%;
    padding-right: 12.5%;
  }
}

/* wide display: enforce maximum width of header to match content */
@media (min-width: 1000px) {
  header {
    width: 760px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 0;
    padding-right: 0;
  }
}

/* tablet/laptop: comfortable padding */
@media (min-width: 481px) and (max-width: 999px) {
  header {
    padding-left: 6%;
    padding-right: 6%;
  }
}

/*
medium display: nav goes under name
*/
@media (max-width: 760px) {
  header { display: block; }

  header .blog-name {
    display: block;
    width: 100%;
    padding-bottom: 10px;
  }

  nav {
    width: 100%;
  }
}

/*
narrow display: collapse the header (don't show the menu items)
instead, display a burger menu.
*/
@media (max-width: 500px) {
  header {
    height: 35px;
    display: flex;
    align-items: center;
  }

  header .blog-name {
    display: inline-block;
    width: 70%;
  }

  nav {
    display: inline-block;
    width: 27%;
  }

  nav ul,
  nav:active ul {
    display: none;
    position: absolute;

    background: #fff;
    border: 1px solid #444;
    right: 10px;
    top: 55px;
    width: 40%;
    min-width: 160px;
    border-radius: 4px 0 4px 4px;
    z-index: 1;
  }

  nav li {
    text-align: left;
    display: block;
    padding: 0;
    margin: 0;
  }
  header li a { border-bottom: none; }
  header li a:hover { border-bottom: none; }

  nav:hover ul {
    display: block;
  }

  #menu-icon {
    display: inline-block;
    margin-right: 10px;
    margin-top: 5px;
  }
}

table {
  line-height: 1em;
  margin-left: auto;
  margin-right: auto;
  border-collapse: collapse;
  text-align: center;
  margin-bottom: 1.5em;
}

tr:first-of-type {
  background: #eae9f4;
}

tr:first-of-type > th {
  text-align: center;
}

tr,
th,
td {
  padding: 10px;
  border: 1px solid lightgray;
}

table tbody tr td {
  border: 1px solid lightgray;
}

